# libwhirlpool

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
patch/: Whirlpool.c.patch  nessie.h.patch
src/: Makefile.am  Makefile.in  Whirlpool.c  whirlpool.h  whirlpoolsum.1  whirlpoolsum.c
